@@ -574,6 +574,11 @@ class RouteSetTests < Test::Unit::TestCase
     assert_equal ['admin/user/show', {}], rs.generate({:action => 'show'}, {:controller => 'admin/user', :action => 'list', :id => '10'})
     assert_equal ['admin/user/list/10', {}], rs.generate({}, {:controller => 'admin/user', :action => 'list', :id => '10'})
   end
+
+  def test_ignores_leading_slash
+    @rs.draw {|m| m.connect '/:controller/:action/:id'}
+    test_default_setup
+  end
   
   def test_time_recognition
     n = 10000
